src/test/resources/expected/test-exception-26.kore.golden
Parse error: ../../../test/resources//test-exception-26.kore:5:23:
  |
5 |   symbol #a{#b}(#m) : n []
  |                       ^
unexpected 'n'
expecting '#'
